# selfspec-calculator

./: .gitignore  README.md  Roadmap.md  pyproject.toml
examples/: hardware_analog_periphery.yaml  hardware_custom_library.yaml  hardware_hyflexpim_song_2025.yaml  hardware_science_adi9405_v1_neurosim.yaml  hardware_soc_area.yaml  hardware_soc_area_dac8.yaml  hardware_soc_memory.yaml  library_custom_minimal.json  library_hyflexpim_song_2025.json  model_llama3_2_1b.yaml  model_qwen3_0p6b.yaml  model_qwen3_1p7b.yaml
openspec/changes/add-component-leakage-power-accounting/: design.md  proposal.md  tasks.md
openspec/changes/batch-input-runner-summary/: design.md  proposal.md  tasks.md
openspec/changes/fine-grained-verify-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/library-from-json-files/: tasks.md
openspec/changes/neurosim-library-and-buffer-overlap/: design.md  proposal.md  tasks.md
openspec/changes/optimal-k-sweep-script/: design.md  proposal.md  tasks.md
openspec/changes/pipeline-fill-latency-fix/: design.md  proposal.md  tasks.md
openspec/changes/roadmap-area-capacity-pipeline/: design.md  proposal.md  (+1 more)
src/selfspec_calculator/: batch_inputs.py  batch_inputs_cli.py  config.py  estimator.py  k_sweep.py  k_sweep_cli.py  report.py
tests/: test_accounting.py  test_batch_inputs_cli.py  test_cli_smoke.py  test_cli_soc_examples.py  test_delta_readout_area.py  test_k_sweep_cli.py  test_library_json_source.py  test_reference_extracts.py  test_report_shape.py  test_serialized_dpu_feature_accounting.py  test_soc_hardware_model.py  test_validation.py
(+25 files in other folders)
