[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfspec-calculator"
version = "0.1.0"
description = "Self-speculating analog inference performance (PPA) calculator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ppa-calculator = "selfspec_calculator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
selfspec_calculator = ["libraries/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
